# vault

./: .buildinfo  .gitattributes  .gitmodules  2046.md  LICENSE  README.adoc  README.md  build-watch.ps1  build.bat  build.ps1  build.sh  flow.js  genindex.html  index.backup.html  index.html  index.md  manage.py  objects.inv  pipeline.py  readings.html  readings.md  requirements.txt  search.html  searchindex.js  style.css
.doctrees/: environment.pickle  index.doctree
.doctrees/essays/: 01H22V89NXZFA4Z9DCT9VWHFGS.doctree  01H2FRAPRN5PHYMAA6RMYF3F83.doctree  01HG36D05JMVW0T82FTWG93R71.doctree  clean-code-notes.doctree  how-to-design-program-1.doctree
.doctrees/etudes/: 2046.doctree
___/: .gitignore  INCLUDE.md  KNOWLEDGE-BACKLOG.md  README.md  index.md  references.bib
___/_/Engineering/Software/Programming Language/Python/Python-Compiled-Extension/: CMakeLists.txt  Python-Compiled-Extension-Part-1.rst  demo.c  setup.py
essays/: 01H22V89NXZFA4Z9DCT9VWHFGS.html  01H2FRAPRN5PHYMAA6RMYF3F83.html  01HG36D05JMVW0T82FTWG93R71.html  clean-code-notes.html  how-to-design-program-1.html
etudes/: 2046.html
memoirs/: collection.html
personal/: projects.html  resume.html
scripts/: build.bat  build.sh
source/: .gitignore  8bit-computer.md  alltalk.md  backlog.md  conf.py  culinary.md  engineering-hardware.md  engineering-software.md  eyes.html  flow.js  game-design.md  games.md  index.md  knowledge.md  lego-general.md  lego-technic.md  linked-list-c.md  me.md  notes.md  people.md  quotes.txt  readings.md  references.bib  references.md  resume.md  style.css
(+1096 files in other folders)
